commit add migration and controller
