# modules/system/dto/user.go
@@ -1,0 +1,12 @@
+package dto
+
+type UserForm struct {
+	Name string `json:"name"`
+}
+
+type UserListQueryFilter struct {
+}
+
+type UserItem struct {
+	Name string `json:"name"`
+}
