# modules/system/routes/route_user_controller.go
@@ -5,6 +5,7 @@ package routes
 import (
 	 "strings"
 	"atom/http/modules/system/controller"
+	"atom/http/modules/system/dto"
 
 	. "github.com/rogeecn/gen"
 	"github.com/gin-gonic/gin"
@@ -12,5 +13,9 @@ import (
 
 func routeUserController(engine *gin.RouterGroup, controller *controller.UserController) {
 	basePath := engine.BasePath()
-	engine.GET(strings.TrimPrefix("/user/get-name/:id", basePath), DataFunc1(controller.GetName, Integer[uint]("id", PathParamError)))
+	engine.GET(strings.TrimPrefix("/users/:id", basePath), DataFunc1(controller.Show, Integer[uint]("id", PathParamError)))
+	engine.GET(strings.TrimPrefix("/users", basePath), DataFunc1(controller.List, Query(&dto.UserListQueryFilter{}, QueryParamError)))
+	engine.POST(strings.TrimPrefix("/users", basePath), DataFunc1(controller.Create, Body(&dto.UserForm{}, BodyParamError)))
+	engine.PUT(strings.TrimPrefix("/users/:id", basePath), Func2(controller.Update, Integer[uint]("id", PathParamError), Body(&dto.UserForm{}, BodyParamError)))
+	engine.DELETE(strings.TrimPrefix("/users/:id", basePath), Func1(controller.Delete, Integer[uint]("id", PathParamError)))
 }
